fixed the ul navigation bar by using flexbox to wrap the ul content so that it does not overflow to the right side of the screen on small screens.

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@ h1{
 nav > ul{
     display:flex;
     justify-content: space-evenly;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
 }
 
 h1,h2{
